--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,22 +9,24 @@ builds:
       # goreleaser does not work with CGO, it could also complicate
       # usage by users in CI/CD systems like Terraform Cloud where
       # they are unable to install libraries.
-      - CGO_ENABLED=1
+      - CGO_ENABLED=0
     mod_timestamp: '{{ .CommitTimestamp }}'
+    tags:
+      - no_pkcs11
     flags:
       - -trimpath
     ldflags:
       - '-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}'
     goos:
-      # - freebsd
-      # - windows
+      - freebsd
+      - windows
       - linux
-      # - darwin
+      - darwin
     goarch:
       - amd64
-      # - '386'
-      # - arm
-      # - arm64
+      - '386'
+      - arm
+      - arm64
     ignore:
       - goos: darwin
         goarch: '386'
